tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\",\"roles\":[],\"permissions\":[],\"menus\":[],\"is_verified\":false}"
