tests/requests/snapshots/can_register@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 47
expression: saved_user
---
Ok(
    Model {
        created_at: DATE,
        updated_at: DATE,
        id: ID
        pid: PID,
        email: "test@loco.com",
        password: "PASSWORD",
        api_key: "lo-PID",
        name: "loco",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: Some(
            "PID",
        ),
        email_verification_sent_at: Some(
            DATE,
        ),
        email_verified_at: None,
        magic_link_token: None,
        magic_link_expiration: None,
        department_id: None,
        manager_pid: None,
        tenant_id: Some(
            "default",
        ),
    },
)
